--- a/src/SenseNet.Search.Lucene29.Centralized.Index/packages.config
+++ b/src/SenseNet.Search.Lucene29.Centralized.Index/packages.config
@@ -1,10 +1,17 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="EntityFramework" version="6.1.2" targetFramework="net461" />
-  <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net461" />
-  <package id="SenseNet.Common" version="7.1.1" targetFramework="net461" />
-  <package id="SenseNet.Search" version="1.1.0" targetFramework="net461" />
-  <package id="SenseNet.Security" version="2.3.1" targetFramework="net461" />
-  <package id="SenseNet.Security.EF6SecurityStore" version="2.3.0.0" targetFramework="net461" />
-  <package id="SenseNet.Tools" version="2.2.0" targetFramework="net461" />
+  <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net461" />
+  <package id="SenseNet.Common" version="7.2.0" targetFramework="net461" />
+  <package id="SenseNet.Search" version="2.0.0" targetFramework="net461" />
+  <package id="SenseNet.Search.Lucene29.Lucene.Net" version="2.9.4.301" targetFramework="net461" />
+  <package id="SenseNet.Security" version="3.0.0" targetFramework="net461" />
+  <package id="SenseNet.Security.EF6SecurityStore" version="3.0.0" targetFramework="net461" />
+  <package id="SenseNet.Tools" version="3.0.0" targetFramework="net461" />
+  <package id="System.Configuration.ConfigurationManager" version="4.5.0" targetFramework="net461" />
+  <package id="System.Data.SqlClient" version="4.5.1" targetFramework="net461" />
+  <package id="System.Diagnostics.EventLog" version="4.5.0" targetFramework="net461" />
+  <package id="System.Security.AccessControl" version="4.5.0" targetFramework="net461" />
+  <package id="System.Security.Permissions" version="4.5.0" targetFramework="net461" />
+  <package id="System.Security.Principal.Windows" version="4.5.0" targetFramework="net461" />
 </packages>
