--- a/src/SenseNet.Search.Lucene29.Centralized/SenseNet.Search.Lucene29.Centralized.nuspec
+++ b/src/SenseNet.Search.Lucene29.Centralized/SenseNet.Search.Lucene29.Centralized.nuspec
@@ -2,7 +2,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2012/06/nuspec.xsd">
   <metadata>
     <id>SenseNet.Search.Lucene29.Centralized</id>
-    <version>1.0</version>
+    <version>1.1</version>
     <title>sensenet Lucene29 Centralized library</title>
     <authors>kavics,tusmester</authors>
     <owners>Sense/Net</owners>
@@ -15,10 +15,11 @@
     <copyright>Copyright © Sense/Net Inc.</copyright>
     <tags>sensenet ecm ecms indexing lucene service</tags>
     <dependencies>
-      <dependency id="SenseNet.Services" version="7.1.1" />
-      <dependency id="SenseNet.Search" version="1.1.0" />
-      <dependency id="SenseNet.Search.Lucene29" version="7.1.1" />
-      <dependency id="SenseNet.Search.Lucene29.Common" version="7.1.1" />
+      <dependency id="SenseNet.Services" version="7.2.0" />
+      <dependency id="SenseNet.Search" version="2.0.0" />
+      <dependency id="SenseNet.Search.Lucene29" version="7.2" />
+      <dependency id="SenseNet.Search.Lucene29.Common" version="7.2" />
+      <dependency id="SenseNet.Security" version="3.0.0" />
     </dependencies>
   </metadata>
   <files>
