--- a/src/SenseNet.Search.Lucene29.Common/SenseNet.Search.Lucene29.Common.nuspec
+++ b/src/SenseNet.Search.Lucene29.Common/SenseNet.Search.Lucene29.Common.nuspec
@@ -2,7 +2,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2012/06/nuspec.xsd">
   <metadata>
     <id>SenseNet.Search.Lucene29.Common</id>
-    <version>7.1.1</version>
+    <version>7.2.0</version>
     <title>sensenet Lucene29 Common library</title>
     <authors>kavics,tusmester</authors>
     <owners>Sense/Net</owners>
@@ -15,12 +15,13 @@
     <copyright>Copyright © Sense/Net Inc.</copyright>
     <tags>sensenet ecm ecms indexing lucene</tags>
     <dependencies>
-      <dependency id="SenseNet.Search" version="1.1.0" />
-      <dependency id="SenseNet.Services" version="7.1.1" />
-      <dependency id="SenseNet.Search.Lucene29" version="7.1.1" />
+      <dependency id="SenseNet.Search" version="2.0.0" />
+      <dependency id="SenseNet.Services" version="7.2.0" />
+      <dependency id="SenseNet.Search.Lucene29" version="7.2" />
+      <dependency id="SenseNet.Security" version="3.0.0" />
     </dependencies>
   </metadata>
   <files>
-    <file src="bin\Release\SenseNet.Search.Lucene29.Common.*" target="lib\net451" />
+    <file src="bin\Release\SenseNet.Search.Lucene29.Common.*" target="lib\net461" />
   </files>
 </package>
