--- a/src/SenseNet.Search.Lucene29.Centralized/SenseNet.Search.Lucene29.Centralized.csproj
+++ b/src/SenseNet.Search.Lucene29.Centralized/SenseNet.Search.Lucene29.Centralized.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <Version>1.2.0</Version>
+    <Version>1.2.1</Version>
     <Authors>kavics,tusmester</Authors>
     <Company>Sense/Net Inc.</Company>
     <Copyright>Copyright © Sense/Net Inc.</Copyright>
@@ -29,6 +29,7 @@
     <ProjectReference Include="..\SenseNet.Search.Lucene29.Centralized.Common\SenseNet.Search.Lucene29.Centralized.Common.csproj">
       <ExcludeAssets>all</ExcludeAssets>
     </ProjectReference>
+    <ProjectReference Include="..\SenseNet.Search.Lucene29.Common\SenseNet.Search.Lucene29.Common.csproj" />
     <ProjectReference Include="..\SenseNet.Search.Lucene29\SenseNet.Search.Lucene29.csproj" />
   </ItemGroup>
 
