--- a/src/SenseNet.Search.Lucene29.Centralized.Service/packages.config
+++ b/src/SenseNet.Search.Lucene29.Centralized.Service/packages.config
@@ -16,4 +16,6 @@
   <package id="System.Security.AccessControl" version="4.5.0" targetFramework="net461" />
   <package id="System.Security.Permissions" version="4.5.0" targetFramework="net461" />
   <package id="System.Security.Principal.Windows" version="4.5.0" targetFramework="net461" />
+  <package id="System.ServiceModel.Http" version="4.7.0" targetFramework="net461" />
+  <package id="System.ServiceModel.Primitives" version="4.7.0" targetFramework="net461" />
 </packages>
