--- a/src/SenseNet.Search.Lucene29.Centralized.GrpcService/SenseNet.Search.Lucene29.Centralized.GrpcService.csproj
+++ b/src/SenseNet.Search.Lucene29.Centralized.GrpcService/SenseNet.Search.Lucene29.Centralized.GrpcService.csproj
@@ -15,6 +15,13 @@
 
   <ItemGroup>
     <PackageReference Include="Grpc.AspNetCore" Version="2.27.0" />
+    <PackageReference Include="SenseNet.Search" Version="2.3.1" />
+    <PackageReference Include="SenseNet.Security.EFCSecurityStore" Version="3.0.0" />
+    <PackageReference Include="SenseNet.Security.Messaging.RabbitMQ" Version="1.2.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\SenseNet.Search.Lucene29.Centralized.Index\SenseNet.Search.Lucene29.Centralized.Index.csproj" />
   </ItemGroup>
 
 </Project>
