--- a/src/SenseNet.Search.Lucene29.Centralized.GrpcService/appsettings.json
+++ b/src/SenseNet.Search.Lucene29.Centralized.GrpcService/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "SecurityStorage": ""
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -10,6 +13,11 @@
   "Kestrel": {
     "EndpointDefaults": {
       "Protocols": "Http2"
+    }
+  },
+  "sensenet": {
+    "rabbitmq": {
+      "ServiceUrl": ""
     }
   }
 }
