--- a/src/SenseNet.Search.Lucene29.Centralized.Service/App.config
+++ b/src/SenseNet.Search.Lucene29.Centralized.Service/App.config
@@ -1,10 +1,11 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
     <sectionGroup name="sensenet">
       <section name="providers" type="System.Configuration.NameValueSectionHandler" />
       <section name="tracing" type="System.Configuration.NameValueSectionHandler" />
+      <section name="rabbitmq" type="System.Configuration.NameValueSectionHandler" />
     </sectionGroup>
   </configSections>
   <startup>
@@ -14,6 +15,7 @@
     <bindings>
       <netTcpBinding>
         <binding maxBufferPoolSize="2147483647" maxReceivedMessageSize="2147483647">
+          <security mode="None" />
           <readerQuotas maxDepth="32" maxStringContentLength="5242880" maxArrayLength="1638400" maxNameTableCharCount="1638400" />
         </binding>
       </netTcpBinding>
@@ -40,7 +42,7 @@
     </behaviors>
   </system.serviceModel>
   <connectionStrings>
-    <add name="SecurityStorage" connectionString="" providerName="System.Data.SqlClient" />
+    <add name="SecurityStorage" connectionString="Integrated Security=SSPI;Persist Security Info=False;Initial Catalog=SN7_IndexBackup;Data Source=.\SQL2016" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <!--<add key="SecurityMsmqChannelQueueName" value="" />-->
@@ -49,13 +51,29 @@
     <providers>
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
+    <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
+      <parameters>
+        <parameter value="mssqllocaldb" />
+      </parameters>
+    </defaultConnectionFactory>
   </entityFramework>
   <sensenet>
     <providers>
-      <add key="SecurityMessageProvider" value="SenseNet.Security.Messaging.Msmq.MsmqMessageProvider" />
+      <add key="SecurityMessageProvider" value="SenseNet.Security.Messaging.RabbitMQ.RabbitMQMessageProvider" />
     </providers>
     <tracing>
       <!--<add key="TraceCategories" value="Index;IndexQueue;Messaging;Security;SecurityQueue;System" />-->
     </tracing>
+    <rabbitmq>
+      <add key="ServiceUrl" value="amqp://fwneawvx:4_e_UaaDzGrR5vT-FZWUbPUMmAAT4FPq@fly.rmq.cloudamqp.com/fwneawvx" />
+    </rabbitmq>
   </sensenet>
+  <runtime>
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <assemblyIdentity name="System.Data.SqlClient" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.6.1.1" newVersion="4.6.1.1" />
+      </dependentAssembly>
+    </assemblyBinding>
+  </runtime>
 </configuration>
