--- a/src/SenseNet.Search.Lucene29.Centralized.Service/packages.config
+++ b/src/SenseNet.Search.Lucene29.Centralized.Service/packages.config
@@ -1,14 +1,19 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="EntityFramework" version="6.1.2" targetFramework="net461" />
+  <package id="Microsoft.Diagnostics.Tracing.EventSource.Redist" version="1.1.28" targetFramework="net461" />
   <package id="Microsoft.Extensions.Configuration" version="2.2.0" targetFramework="net461" />
   <package id="Microsoft.Extensions.Configuration.Abstractions" version="2.2.0" targetFramework="net461" />
   <package id="Microsoft.Extensions.Primitives" version="2.2.0" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net461" />
+  <package id="RabbitMQ.Client" version="5.1.2" targetFramework="net461" />
   <package id="SenseNet.Search" version="2.3.0" targetFramework="net461" />
   <package id="SenseNet.Security" version="4.1.0" targetFramework="net461" />
+  <package id="SenseNet.Security.Messaging.RabbitMQ" version="1.2.0" targetFramework="net461" />
   <package id="SenseNet.Tools" version="3.2.0" targetFramework="net461" />
   <package id="System.Buffers" version="4.4.0" targetFramework="net461" />
   <package id="System.Configuration.ConfigurationManager" version="4.5.0" targetFramework="net461" />
+  <package id="System.Data.SqlClient" version="4.8.1" targetFramework="net461" />
   <package id="System.Diagnostics.EventLog" version="4.5.0" targetFramework="net461" />
   <package id="System.Memory" version="4.5.1" targetFramework="net461" />
   <package id="System.Numerics.Vectors" version="4.4.0" targetFramework="net461" />
