Add configuration, logging and tracong to the GrpcService project.

--- a/src/SenseNet.Search.Lucene29.Centralized.GrpcService/appsettings.json
+++ b/src/SenseNet.Search.Lucene29.Centralized.GrpcService/appsettings.json
@@ -16,6 +16,9 @@
     }
   },
   "sensenet": {
+    "tracing": {
+      "TraceCategories":  "System,Security" 
+    },
     "rabbitmq": {
       "ServiceUrl": ""
     }
