CheckIndexIntegrity feature by manually stopping the service.

--- a/src/Tests/CentralizedIndexBackupTester/CentralizedIndexBackupTester.csproj
+++ b/src/Tests/CentralizedIndexBackupTester/CentralizedIndexBackupTester.csproj
@@ -18,6 +18,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\SenseNet.Search.Lucene29.Centralized\SenseNet.Search.Lucene29.Centralized.csproj" />
+    <ProjectReference Include="..\..\SenseNet.Search.Lucene29.Local\SenseNet.Search.Lucene29.Local.csproj" />
   </ItemGroup>
 
   <ItemGroup>
