--- a/src/SenseNet.Search.Lucene29.Centralized.Service/packages.config
+++ b/src/SenseNet.Search.Lucene29.Centralized.Service/packages.config
@@ -7,8 +7,11 @@
   <package id="Microsoft.Extensions.Primitives" version="2.2.0" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net461" />
   <package id="RabbitMQ.Client" version="5.1.2" targetFramework="net461" />
+  <package id="SenseNet.Common" version="7.4.0" targetFramework="net461" />
   <package id="SenseNet.Search" version="2.3.1.1" targetFramework="net461" />
+  <package id="SenseNet.Search.Lucene29.Lucene.Net" version="2.9.4.301" targetFramework="net461" />
   <package id="SenseNet.Security" version="4.1.0" targetFramework="net461" />
+  <package id="SenseNet.Security.EF6SecurityStore" version="4.1.0" targetFramework="net461" />
   <package id="SenseNet.Security.Messaging.RabbitMQ" version="1.2.0" targetFramework="net461" />
   <package id="SenseNet.Tools" version="3.2.1" targetFramework="net461" />
   <package id="System.Buffers" version="4.4.0" targetFramework="net461" />
