Remove connection strings from wcf service config.

--- a/src/SenseNet.Search.Lucene29.Centralized.Service/App.config
+++ b/src/SenseNet.Search.Lucene29.Centralized.Service/App.config
@@ -42,7 +42,7 @@
     </behaviors>
   </system.serviceModel>
   <connectionStrings>
-    <add name="SecurityStorage" connectionString="Integrated Security=SSPI;Persist Security Info=False;Initial Catalog=SN7_IndexBackup;Data Source=.\SQL2016" providerName="System.Data.SqlClient" />
+    <add name="SecurityStorage" connectionString="" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <!--<add key="SecurityMsmqChannelQueueName" value="" />-->
@@ -65,7 +65,7 @@
       <!--<add key="TraceCategories" value="Index;IndexQueue;Messaging;Security;SecurityQueue;System" />-->
     </tracing>
     <rabbitmq>
-      <add key="ServiceUrl" value="amqp://fwneawvx:4_e_UaaDzGrR5vT-FZWUbPUMmAAT4FPq@fly.rmq.cloudamqp.com/fwneawvx" />
+      <add key="ServiceUrl" value="" />
     </rabbitmq>
   </sensenet>
   <runtime>
