Update sensenet references, add empty Backup implementations and raise public versions of all projects.

--- a/src/SenseNet.Search.Lucene29.Centralized.Service/App.config
+++ b/src/SenseNet.Search.Lucene29.Centralized.Service/App.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
@@ -22,19 +22,17 @@
       <service name="SenseNet.Search.Lucene29.Centralized.Index.SearchService" behaviorConfiguration="SearchServiceBehavior">
         <host>
           <baseAddresses>
-            <add baseAddress="net.tcp://localhost:50123/SenseNetServiceModel/service/SearchService"/>
+            <add baseAddress="net.tcp://localhost:50123/SenseNetServiceModel/service/SearchService" />
           </baseAddresses>
         </host>
-        <endpoint address=""
-                  binding="netTcpBinding"
-                  contract="SenseNet.Search.Lucene29.Centralized.Common.ISearchServiceContract" />
+        <endpoint address="" binding="netTcpBinding" contract="SenseNet.Search.Lucene29.Centralized.Common.ISearchServiceContract" />
       </service>
     </services>
     <behaviors>
       <serviceBehaviors>
         <behavior name="SearchServiceBehavior">
-          <serviceMetadata httpGetEnabled="false"/>
-          <serviceDebug includeExceptionDetailInFaults="False"/>
+          <serviceMetadata httpGetEnabled="false" />
+          <serviceDebug includeExceptionDetailInFaults="False" />
         </behavior>
       </serviceBehaviors>
     </behaviors>
@@ -58,4 +56,12 @@
       <!--<add key="TraceCategories" value="Index;IndexQueue;Messaging;Security;SecurityQueue;System" />-->
     </tracing>
   </sensenet>
+  <runtime>
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <assemblyIdentity name="System.Buffers" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.0.3.0" newVersion="4.0.3.0" />
+      </dependentAssembly>
+    </assemblyBinding>
+  </runtime>
 </configuration>
