--- a/src/SenseNet.Search.Lucene29.Centralized.GrpcService/appsettings.json
+++ b/src/SenseNet.Search.Lucene29.Centralized.GrpcService/appsettings.json
@@ -2,11 +2,20 @@
   "ConnectionStrings": {
     "SecurityStorage": ""
   },
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
+  "Serilog": {
+    "Using": [ "Serilog.Sinks.Console", "Serilog.Sinks.File", "Serilog.Sinks.Graylog" ],
+    "MinimumLevel": {
+      "Default": "Verbose",
+      "Override": {
+        "Microsoft": "Warning",
+        "System": "Warning"
+      }
+    },
+    "WriteTo": [
+      { "Name": "Console" }
+    ],
+    "Properties": {
+      "Application": "SenseNet.Search.Lucene29.Centralized.GrpcService"
     }
   },
   "AllowedHosts": "*",
@@ -23,6 +32,6 @@
       "rabbitmq": {
         "ServiceUrl": ""
       }
-    } 
+    }
   }
 }
