--- a/src/SenseNet.Search.Lucene29.Centralized.GrpcService/SenseNet.Search.Lucene29.Centralized.GrpcService.csproj
+++ b/src/SenseNet.Search.Lucene29.Centralized.GrpcService/SenseNet.Search.Lucene29.Centralized.GrpcService.csproj
@@ -19,6 +19,8 @@
     <PackageReference Include="SenseNet.Search" Version="2.4.8" />
     <PackageReference Include="SenseNet.Security.EFCSecurityStore" Version="3.0.2" />
     <PackageReference Include="SenseNet.Security.Messaging.RabbitMQ" Version="1.2.1" />
+    <PackageReference Include="Serilog.AspNetCore" Version="4.1.0" />
+    <PackageReference Include="Serilog.Sinks.Graylog" Version="2.2.2" />
   </ItemGroup>
 
   <ItemGroup>
