--- a/src/SenseNet.Search.Lucene29.Centralized.GrpcService/appsettings.Development.json
+++ b/src/SenseNet.Search.Lucene29.Centralized.GrpcService/appsettings.Development.json
@@ -1,10 +1,14 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Debug",
-      "System": "Information",
-      "Grpc": "Information",
-      "Microsoft": "Information"
-    }
+  "Serilog": {
+    "WriteTo": [
+      { "Name": "Console" },
+      {
+        "Name": "File",
+        "Args": {
+          "path": "App_Data/Logs/searchservice-.txt",
+          "rollingInterval": "Day"
+        }
+      }
+    ]
   }
 }
