--- a/src/SenseNet.Search.Lucene29/SenseNet.Search.Lucene29.csproj
+++ b/src/SenseNet.Search.Lucene29/SenseNet.Search.Lucene29.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+	<TargetFrameworks>netstandard2.0;net6.0</TargetFrameworks>
     <AssemblyName>SenseNet.Search.Lucene29</AssemblyName>
     <RootNamespace>SenseNet.Search.Lucene29</RootNamespace>
     <Version>7.4.6.1</Version>
