Feature/upgrade net6 (#77)
* Add net6 as a target framework.

* Update references.

--- a/src/SenseNet.Search.Lucene29.Centralized.GrpcClient/SenseNet.Search.Lucene29.Centralized.GrpcClient.csproj
+++ b/src/SenseNet.Search.Lucene29.Centralized.GrpcClient/SenseNet.Search.Lucene29.Centralized.GrpcClient.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.1</TargetFramework>
+	<TargetFrameworks>netstandard2.1;net6.0</TargetFrameworks>
     <Version>0.0.9.1</Version>
     <Company>Sense/Net Inc.</Company>
     <Description>Grpc service client for the Central Lucene29 Search Engine for the sensenet platform.</Description>
@@ -23,9 +23,9 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Google.Protobuf" Version="3.11.4" />
-    <PackageReference Include="Grpc.Net.Client" Version="2.28.0" />
-    <PackageReference Include="Grpc.Tools" Version="2.28.1">
+    <PackageReference Include="Google.Protobuf" Version="3.21.6" />
+    <PackageReference Include="Grpc.Net.Client" Version="2.48.0" />
+    <PackageReference Include="Grpc.Tools" Version="2.48.1">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
