--- a/src/SenseNet.Search.Lucene29.Centralized.Index/SenseNet.Search.Lucene29.Centralized.Index.csproj
+++ b/src/SenseNet.Search.Lucene29.Centralized.Index/SenseNet.Search.Lucene29.Centralized.Index.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+	<TargetFrameworks>netstandard2.0;net6.0</TargetFrameworks>
     <AssemblyName>SenseNet.Search.Lucene29.Centralized.Index</AssemblyName>
     <RootNamespace>SenseNet.Search.Lucene29.Centralized.Index</RootNamespace>
     <Version>2.1.6.1</Version>
@@ -22,9 +22,9 @@
 
   <ItemGroup>
     <PackageReference Include="SenseNet.Common" Version="7.5.6" />
-    <PackageReference Include="System.Configuration.ConfigurationManager" Version="4.5.0" />
+    <PackageReference Include="System.Configuration.ConfigurationManager" Version="6.0.1" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
-    <PackageReference Include="SenseNet.Security" Version="4.1.4" />
+    <PackageReference Include="SenseNet.Security" Version="4.1.4.2" />
     <PackageReference Include="SenseNet.Search" Version="2.4.12.1" />
     <PackageReference Include="SenseNet.Search.Lucene29.Lucene.Net" Version="2.9.4.301" />
   </ItemGroup>
