--- a/src/SenseNet.Search.Lucene29.Centralized/SenseNet.Search.Lucene29.Centralized.csproj
+++ b/src/SenseNet.Search.Lucene29.Centralized/SenseNet.Search.Lucene29.Centralized.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+	<TargetFrameworks>netstandard2.0;net6.0</TargetFrameworks>
     <Version>1.4.6.1</Version>
     <Authors>kavics,tusmester</Authors>
     <Company>Sense/Net Inc.</Company>
@@ -20,9 +20,9 @@
 
   <ItemGroup>
     <PackageReference Include="SenseNet.Tools" Version="3.2.7" />
-    <PackageReference Include="SenseNet.ContentRepository" Version="7.7.33.1" />
+    <PackageReference Include="SenseNet.ContentRepository" Version="7.7.33.3" />
     <PackageReference Include="SenseNet.Search.Lucene29.Lucene.Net" Version="2.9.4.301" />
-    <PackageReference Include="System.ServiceModel.Primitives" Version="4.5.3" />
+    <PackageReference Include="System.ServiceModel.Primitives" Version="4.10.0" />
   </ItemGroup>
 
   <ItemGroup>
