--- a/src/SenseNet.Search.Lucene29/SenseNet.Search.Lucene29.csproj
+++ b/src/SenseNet.Search.Lucene29/SenseNet.Search.Lucene29.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+	<TargetFrameworks>netstandard2.0;net6.0</TargetFrameworks>
     <AssemblyName>SenseNet.Search.Lucene29</AssemblyName>
     <RootNamespace>SenseNet.Search.Lucene29</RootNamespace>
     <Version>7.4.6.1</Version>
@@ -21,10 +21,10 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="System.Configuration.ConfigurationManager" Version="4.5.0" />
+    <PackageReference Include="System.Configuration.ConfigurationManager" Version="6.0.1" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     <PackageReference Include="SenseNet.Tools" Version="3.2.7" />
-    <PackageReference Include="SenseNet.Security" Version="4.1.4" />
+    <PackageReference Include="SenseNet.Security" Version="4.1.4.2" />
     <PackageReference Include="SenseNet.Search" Version="2.4.12.1" />
     <PackageReference Include="SenseNet.Search.Lucene29.Lucene.Net" Version="2.9.4.301" />
   </ItemGroup>
