--- a/src/SenseNet.Search.Lucene29.Centralized.GrpcClient/SenseNet.Search.Lucene29.Centralized.GrpcClient.csproj
+++ b/src/SenseNet.Search.Lucene29.Centralized.GrpcClient/SenseNet.Search.Lucene29.Centralized.GrpcClient.csproj
@@ -1,45 +1,49 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-	<TargetFrameworks>netstandard2.1;net6.0</TargetFrameworks>
-    <Version>0.0.10.1</Version>
-    <Company>Sense/Net Inc.</Company>
-    <Description>Grpc service client for the Central Lucene29 Search Engine for the sensenet platform.</Description>
-    <Copyright>Copyright © Sense/Net Inc.</Copyright>
-    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <PackageProjectUrl>https://github.com/SenseNet/sn-search-lucene29</PackageProjectUrl>
-    <PackageLicenseUrl>https://github.com/SenseNet/sn-search-lucene29/blob/master/LICENSE</PackageLicenseUrl>
-    <RepositoryUrl>https://github.com/SenseNet/sn-search-lucene29.git</RepositoryUrl>
-    <RepositoryType>git</RepositoryType>
-    <PackageReleaseNotes>See release notes on GitHub.</PackageReleaseNotes>
-    <PackageTags>sensenet search indexing lucene grpc</PackageTags>
-    <PackageIconUrl>https://raw.githubusercontent.com/SenseNet/sn-resources/master/images/sn-icon/sensenet-icon-64.png</PackageIconUrl>
-    <Authors>tusmester</Authors>
-  </PropertyGroup>
+	<PropertyGroup>
+		<TargetFrameworks>netstandard2.1;net6.0</TargetFrameworks>
+		<Version>0.0.10.1</Version>
+		<Company>Sense/Net Inc.</Company>
+		<Description>Grpc service client for the Central Lucene29 Search Engine for the sensenet platform.</Description>
+		<Copyright>Copyright © Sense/Net Inc.</Copyright>
+		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+		<PackageProjectUrl>https://github.com/SenseNet/sn-search-lucene29</PackageProjectUrl>
+		<PackageLicenseUrl>https://github.com/SenseNet/sn-search-lucene29/blob/master/LICENSE</PackageLicenseUrl>
+		<RepositoryUrl>https://github.com/SenseNet/sn-search-lucene29.git</RepositoryUrl>
+		<RepositoryType>git</RepositoryType>
+		<PackageReleaseNotes>See release notes on GitHub.</PackageReleaseNotes>
+		<PackageTags>sensenet search indexing lucene grpc</PackageTags>
+		<PackageIconUrl>https://raw.githubusercontent.com/SenseNet/sn-resources/master/images/sn-icon/sensenet-icon-64.png</PackageIconUrl>
+		<Authors>tusmester</Authors>
+		<DebugType>portable</DebugType>
+		<PublishRepositoryUrl>true</PublishRepositoryUrl>
+		<IncludeSymbols>true</IncludeSymbols>
+		<SymbolPackageFormat>snupkg</SymbolPackageFormat>
+	</PropertyGroup>
 
-  <ItemGroup>
-    <None Remove="Protos\sensenet.search.proto" />
-    <None Remove="Protos\sensenet.search.types.proto" />
-  </ItemGroup>
+	<ItemGroup>
+		<None Remove="Protos\sensenet.search.proto" />
+		<None Remove="Protos\sensenet.search.types.proto" />
+	</ItemGroup>
 
-  <ItemGroup>
-    <PackageReference Include="Google.Protobuf" Version="3.21.6" />
-    <PackageReference Include="Grpc.Net.Client" Version="2.48.0" />
-    <PackageReference Include="Grpc.Tools" Version="2.48.1">
-      <PrivateAssets>all</PrivateAssets>
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-    </PackageReference>
-    <PackageReference Include="SenseNet.Tools" Version="3.2.9.1" />
-  </ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="Google.Protobuf" Version="3.21.6" />
+		<PackageReference Include="Grpc.Net.Client" Version="2.48.0" />
+		<PackageReference Include="Grpc.Tools" Version="2.48.1">
+			<PrivateAssets>all</PrivateAssets>
+			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+		</PackageReference>
+		<PackageReference Include="SenseNet.Tools" Version="3.2.11" />
+	</ItemGroup>
 
-  <ItemGroup>
-    <ProjectReference Include="..\SenseNet.Search.Lucene29.Centralized.Common\SenseNet.Search.Lucene29.Centralized.Common.csproj" />
-    <ProjectReference Include="..\SenseNet.Search.Lucene29.Centralized\SenseNet.Search.Lucene29.Centralized.csproj" />
-  </ItemGroup>
+	<ItemGroup>
+		<ProjectReference Include="..\SenseNet.Search.Lucene29.Centralized.Common\SenseNet.Search.Lucene29.Centralized.Common.csproj" />
+		<ProjectReference Include="..\SenseNet.Search.Lucene29.Centralized\SenseNet.Search.Lucene29.Centralized.csproj" />
+	</ItemGroup>
 
-  <ItemGroup>
-    <Protobuf Include="Protos\sensenet.search.proto" GrpcServices="Client" />
-    <Protobuf Include="Protos\sensenet.search.types.proto" GrpcServices="Client" />
-  </ItemGroup>
+	<ItemGroup>
+		<Protobuf Include="Protos\sensenet.search.proto" GrpcServices="Client" />
+		<Protobuf Include="Protos\sensenet.search.types.proto" GrpcServices="Client" />
+	</ItemGroup>
 
 </Project>
